src/components/ModalPage.js - ensure modal is centered, not too wide
Need to add an outer wrapper div, with the outer wrapper providing
frame via padding, and the inner div expanding, but with a max width
and auto margins to center.

--- a/src/styles/components/mapLayout.module.scss
+++ b/src/styles/components/mapLayout.module.scss
@@ -36,8 +36,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    max-width: $overlay_max_width;
-    margin: 0 auto;
+    margin: 0;
   }
 
   /** This element contains the map */
