--- a/src/styles/components/splash.module.scss
+++ b/src/styles/components/splash.module.scss
@@ -3,18 +3,29 @@
 @use '../partials/common';
 @use 'splash' as *;
 
-.wrapper {
+
+// This goes around the inner-wrapper div
+// It provides a frame in which the inner-wrapper can expand to fit.
+.outer-wrapper {
+  position: static;
+  pointer-events: auto;
+  width: 100%;
+  height: 100%;
+  padding: header.$nav_height header.$nav_pad_left header.$nav_pad_top header.$nav_pad_left;
+}
+
+// The inner-wrapper div is the modal box, containing the header, footer, and content.
+// It should not expand off-screen.
+.inner-wrapper {
   display: flex;
   flex: 0 1 auto;
   flex-direction: column;
-  pointer-events: auto;
   background: palette.$bgnd-lt;
   @include common.drop-shadow;
-
-  position: static;
   max-width: $max_width;
-  margin: header.$nav_height header.$nav_pad_left header.$nav_pad_top header.$nav_pad_left;
-  
+  width: 100%;
+  height: 100%;
+  margin: auto;
   
   header {
     background: palette.$head-bgnd-splash;
